src/App.scss
//font-sizes
$xl-text: 4rem;
$large-text: 2.5rem;
$med-text: 1.75rem;
$sm-ish-text: 1.25rem;
$xs-text: .9rem;

//angles
$left-to-right: 205deg;
$right-to-left: 155deg;
$horizontal: 180deg;

//color control
$serika-primary: #ffcd01;
$serika-secondary: #dad6c4;
$serika-tertiary: #464752;
$serika-accent: #1c1f25;

@mixin background-gradient($direction, $color-one, $color-two) {
  background: $color-one;
  background: linear-gradient($direction, $color-one 52%, $color-two 52%);
}

$naut-text-1: #f8cf41;
$naut-text-2: #fff;
$naut__back--light: #27416b;
$naut__back--dark: #28314d;
$naut-accent: #64f9f9;
$naut-accent-2: #d82a26;

@mixin naut__gradient--internal() {
  background: $naut__back--dark;
  background: linear-gradient(205deg, $naut__back--dark 52%, $naut__back--light 52%);
}

@mixin naut__gradient--external() {
  background: $naut__back--dark;
  background: linear-gradient(180deg, $naut__back--dark 52%, $naut__back--light 52%);
}

//$nightmare-primary:   #009680;
//$nightmare-secondary: #052d28;
//$nightmare-tertiary:  #323130;
//$nightmare-accent:    #00c2a3;

$nightmare-tertiary: #40CAA7;
$nightmare__back--dark: #052d28;
$nightmare-accent: #55E1BD;
$nightmare__back--light: #009680;

@mixin nightmare__gradient--internal() {
  //background: $naut-tertiary;
  background: linear-gradient(205deg, $nightmare-tertiary 52%, $nightmare__back--light 52%);
}

@mixin nightmare__gradient--external() {
  //background: $naut-tertiary;
  background: linear-gradient(180deg, $nightmare-tertiary 52%, $nightmare__back--light 52%);
}

//text
@mixin primary-text() {
  font-family: 'Oswald', sans-serif;
}

@mixin secondary-text() {
  font-family: 'Montserrat', sans-serif;
}

//section spacing
@mixin section-spacer($first-other-bottom) {
  @if $first-other-bottom == first {
    padding: {
      top: 5rem;
      bottom: 1.5rem;
    }

  } @else if $first-other-bottom == other {
    padding: {
      top: 1.5rem;
      bottom: 1.5rem;
    }
  } @else {
    padding: {
      top: 1.5rem;
      bottom: 15rem;
    }

    @media (min-width: 768px) {
      padding: {
        bottom: 10rem;
      }
    }

    @media (min-width: 992px) {
      padding: {
        bottom: 7.5rem
      }
    }

  }
}

@mixin inside-section() {
  min-width: 100%;
  min-height: 600px;

  //@media (min-width: 576px) {
  //    min-height: 700px;
  //  }

  @media (min-width: 768px) {
    min-height: 700px;
  }

  @media (min-width: 992px) {
    min-height: 750px;
  }

  @media (min-width: 1200px) {
    min-height: 1000px;
  }

  display: flex;
  flex-direction: column;
  justify-content: center;
}

@mixin content-spacer {
  padding: {
    top: 2rem;
  }
}

//arrows
@mixin next-section-text($arrow-position) {
  color: $serika-accent;
  text-align: center;
  //todo: add a transform of position to get these nicely placed (want them at like 75% down the sections total height I think?
  //todo: change the margining to golden ratio
  @if $arrow-position == first-arrow {
    margin: {
      bottom: 1.5rem;
    }
    font-size: 2rem;
  } @else if $arrow-position == second-arrow {
    margin: {
      bottom: 1.25rem;
    }
    font-size: 1.5rem;
  } @else {
    font-size: 1rem;
    padding: {
      bottom: 3rem;

    }
  }
}

//modifier mixins
@mixin extra-text {
  &--extra {
    color: #00fff7;
  }
}

@mixin title-style($color, $font-size) {

  color: $color;
  font: {
    size: $font-size;
    weight: bold;
  }
  mix-blend-mode: hard-light;

}

@mixin text-style($color, $font-size) {
  color: $color;
  padding: {
    bottom: 2rem;
  }
  font: {
    size: $font-size;
  }
  mix-blend-mode: hard-light;
}

.page {
  position: relative;
}

.navigation {

  &__box {
    background-color: yellow;
    opacity: .5;

    position: fixed;
    float: left;

  }

}

.header {
  @include background-gradient($horizontal, $serika-tertiary, $serika-secondary);
  @include section-spacer(first);

  &__inside {
    @include background-gradient($right-to-left, $serika-tertiary, $serika-secondary);
    @include inside-section();
  }

  &__text {
    text-align: center;
    mix-blend-mode: hard-light;

    &__main {
      @include primary-text;
      font: {
        size: $xl-text;
      }
      color: $serika-primary;
      padding: {
        bottom: 2rem;
      }

    }

    &__subtitle {
      @include secondary-text;
      font: {
        size: $large-text;
      }
      color: $serika-primary;
    }

  }

  //TODO: replace these with FUCKING ARROWS!
  &__arrow {
    color: $serika-accent;
    text-align: center;
    margin: {
      top: 30%;
    }
    mix-blend-mode: multiply;

    //TODO: add some animation to this... like fade each in then back out to draw eye down
    &--large {
      @include next-section-text(first-arrow);
    }

    &--medium {
      @include next-section-text(second-arrow);
    }

    &--small {
      @include next-section-text(third-arrow);
    }

  }
}

.about {
  @include section-spacer(other);
  @include secondary-text();
  @include background-gradient($horizontal, $naut__back--light, $naut__back--dark);

  &__inside {
    @include background-gradient($left-to-right, $naut__back--light, $naut__back--dark);
    @include inside-section();
  }

  &__content {
    @include content-spacer;

    &__opener {
      color: $naut-text-2;
      font-size: $med-text;

    }

    &__title {
      @include title-style($naut-accent, $large-text);
      //text-shadow: 2px 2px 2px $nau;
    }

    &__text {
      @include text-style($naut-text-2, $med-text);
      @include extra-text;

      &__special {
        padding: {
          top: 1rem;
        }
        font: {
          style: italic;
          size: initial;
        }
        @include extra-text;
      }

    }
  }

}

.personal {
  @include section-spacer(other);
  @include secondary-text();
  @include background-gradient($horizontal, $nightmare__back--dark, $nightmare__back--light);

  &__inside {
    @include background-gradient($right-to-left, $nightmare__back--dark, $nightmare__back--light);
    @include inside-section();
  }

  &__content {
    @include content-spacer;

    &__opener {
      @include text-style($naut-text-1, $med-text);
    }

    &__title {
      @include title-style($naut-accent, $large-text);
    }

    &__text {
      @include text-style($naut-text-1, $sm-ish-text);

      &--italics {
        font-style: italic;
      }

      &__list {
        color: $naut-text-1;
        font: {
          size: initial;
        }

      }

      &--link {
        background: linear-gradient(to left, $naut-accent, $naut-text-1);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        white-space: nowrap;
        border-bottom: 1px solid $naut-text-1;

        &:hover {
          border-bottom: 1px solid $naut-accent;
          text-decoration: none;
        }

      }
    }
  }

}

.projects {
  @include section-spacer(other);
  @include secondary-text();
  @include background-gradient($horizontal, $naut__back--light, $naut__back--dark);

  &__inside {
    @include background-gradient($left-to-right, $naut__back--light, $naut__back--dark);
    @include inside-section();
  }

  &__content {
    @include content-spacer;
    //text-shadow: 1px 1px 1px $serika-tertiary;

    &__opener {
      @include text-style($naut-text-2, $med-text);
    }

    &__work {
      padding: {
        top: 1.5rem;
        bottom: 1.5rem;
      }

      &__title {
        @include title-style($naut-accent, $large-text);
        padding: {
          bottom: 1rem;
        }
        margin: auto;
        //
        //&--link {
        background: linear-gradient($right-to-left, $naut-accent, $naut-text-1);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        text-shadow: none;
        margin: auto;

        &:hover {
          text-decoration: none;
        }


        &--unlinked {
          background: none;
          color: $naut-accent;

        }

        &--link {
          border-bottom: 1px solid $naut-text-1;

          &:hover {
            border-bottom: 1px solid $naut-accent;
            text-decoration: none;
          }

        }

      }
    }

    &__skill {
      @include text-style($naut-text-2, $sm-ish-text);
      padding-bottom: 0;

      &__list {
        padding: {
          left: 4rem;
        }
        margin: auto;

      }

      //&--link {
      //  background: linear-gradient(to left, $serika-primary, $serika-secondary);
      //  -webkit-background-clip: text;
      //  -webkit-text-fill-color: transparent;
      //  border-bottom: 1px solid $serika-primary;
      //
      //  &:hover {
      //    border-bottom: 1px solid $serika-secondary;
      //  }
      //
      //}
    }
  }
}

.contact {
  @include section-spacer(last);
  @include secondary-text();
  @include background-gradient($horizontal, $nightmare__back--dark, $nightmare__back--light);

  &__inside {
    @include background-gradient($right-to-left, $nightmare__back--dark, $nightmare__back--light);
    @include inside-section();
  }

  &__content {
    @include content-spacer;

    &__hire {
      color: $naut-text-1;
      font-size: $med-text;
      padding: {
        top: 3rem;
        bottom: 2rem;
      }

      &--link {
        background: linear-gradient($right-to-left, $naut-text-1, $naut-accent);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        white-space: nowrap;
        border-bottom: 1px solid $naut-text-1;

        &:hover {
          text-decoration: none;
          border-bottom: 1px solid $naut-accent;
        }
      }

    }

    &__follow {
      @include text-style($naut-text-1, $med-text);
      @include extra-text;
      padding: {
        top: 2rem;
        bottom: 3rem;
      }

      &__row {
        text-align: center;

        &--link {
          background: -webkit-linear-gradient($right-to-left, $naut-text-1, $naut-accent);
          -webkit-background-clip: text;
          -webkit-text-fill-color: transparent;
          white-space: nowrap;
          border-bottom: 1px solid $naut-text-1;
          text-align: center;

          &:hover {
            text-decoration: none;
            border-bottom: 1px solid $naut-accent;
          }

        }
      }

    }

  }
}

.copy {
  //position: absolute;
  //bottom: 0;
  //left: 35%;
  //color: #fff;
  background: $nightmare__back--light;

  &__text {
    color: #ffffff;
    margin: {
      left: auto;
      right: auto;
      //bottom: 1rem;
    }
    padding: {
      bottom: 1rem;
    }
    text-align: center;

  }
}

